sessions fix
